--- a/frontend/scss/organisms/_o-article.scss
+++ b/frontend/scss/organisms/_o-article.scss
@@ -197,6 +197,8 @@
 .o-article__intro {
   position: relative;
   margin-top: 28px;
+  padding-top: .02px;
+  padding-bottom: .02px;
 
   @include breakpoint('xsmall') {
     flex: 0 0 auto;
@@ -222,7 +224,7 @@
 }
 
 .o-article__intro {
-  padding-top: 12px;
+  padding-top: 11px;
   border-top: 1px solid $color__rules--primary;
 }
 
